--- a/View/AddBook.xaml
+++ b/View/AddBook.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddBook"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Добавить книгу">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление книги" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,13 +68,16 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Название:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
+                        <TextBlock Text="Автор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Издание:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Жанр:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,6 +85,7 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
@@ -90,10 +94,43 @@
                         <TextBox Name="Name"></TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
+                        <ComboBox Name="Author">
+                            <ComboBoxItem>
+                                А. С. Пушкин
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                У. Уитмен
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Леся Украинка
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <ComboBox Name="Publisher">
+                            <ComboBoxItem>
+                                "Колос"
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                "Казань"
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                "Радуга"
+                            </ComboBoxItem>
+                        </ComboBox>
+                    </Grid>
+                    <Grid>
+                        <ComboBox Name="Genre">
+                            <ComboBoxItem>
+                                Поезия
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Эпос
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Научно-популярная литература
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -104,7 +141,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активный"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
