--- a/View/AddCathedra.xaml
+++ b/View/AddCathedra.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddCathedra"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Добавить кафедру">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление кафедры" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,13 +68,10 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Полное название кафедры:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Краткое название кафедры:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -92,9 +89,6 @@
                     <Grid>
                         <TextBox Name="ShortName"></TextBox>
                     </Grid>
-                    <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
-                    </Grid>
                 </StackPanel>
             </Grid>
 
@@ -104,7 +98,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активный"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
