--- a/View/AddCity.xaml
+++ b/View/AddCity.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddCity"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Добавить город">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -33,9 +33,9 @@
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
-        </Grid>
+         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
+             <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление города" Style="{StaticResource AddWindow Header}"></Label>
+         </Grid>
 
         <!-- Main content -->
         <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -68,13 +68,10 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Название:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Страна:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,6 +79,7 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
@@ -90,16 +88,23 @@
                         <TextBox Name="Name"></TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
-                    </Grid>
-                    <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <ComboBox Name="Country">
+                            <ComboBoxItem>
+                                Украина
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Россия
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Чехия
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                 </StackPanel>
             </Grid>
 
             <!-- CheckBoxes' section -->
-            <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <StackPanel Orientation="Vertical">
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
