--- a/View/AddClientCard.xaml
+++ b/View/AddClientCard.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddClientCard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Выдать карту клиента">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Выдача карты клиента" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,13 +68,13 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Получает карту:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
+                        <TextBlock Text="ФИО:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Дата выдачи:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,18 +82,36 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="Name"></TextBox>
+                        <ComboBox Name="ClientType">
+                            <ComboBoxItem>
+                                Преподаватель
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Студент
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
+                        <ComboBox Name="ClientName">
+                            <ComboBoxItem>
+                                А. Б. Романов
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                В. Х. Кузнецов
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                К. К. Кротов
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <DatePicker Name="DateGiven" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Width="100" Margin="0, 0, 0, 10"></DatePicker>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -104,7 +122,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активный"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
