--- a/View/AddFacultyAndSpecialty.xaml
+++ b/View/AddFacultyAndSpecialty.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddFacultyAndSpecialty"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Добавить связь факультет-специальность">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление связи факультет-специальность" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -42,6 +42,8 @@
 
             <!-- Two rows -->
             <Grid.RowDefinitions>
+                <!-- Header --><!--
+                <RowDefinition Height="Auto"></RowDefinition>-->
                 <!-- TextBoxes' content -->
                 <RowDefinition Height="*"></RowDefinition>
                 <!-- CheckBoxes' section -->
@@ -68,13 +70,10 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Факультет:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
-                    </Grid>
-                    <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Специальность:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,18 +81,36 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="Name"></TextBox>
+                        <ComboBox Name="Faculty">
+                            <ComboBoxItem>
+                                Факультет 1
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Факультет 2
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Факультет 3
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
-                    </Grid>
-                    <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <ComboBox Name="Specialty">
+                            <ComboBoxItem>
+                                Специальность 1
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Специальность 2
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Специальность 3
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -104,7 +121,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активный"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
