--- a/View/AddLibraryTransaction.xaml
+++ b/View/AddLibraryTransaction.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddLibraryTransaction"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Выдать книгу">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Выдача книги" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,13 +68,19 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Карта клиента:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
+                        <TextBlock Text="Книга:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Дата взятия:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Дата возвращения:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Выдал книгу:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,18 +88,46 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
                     </Grid>
+
                     <Grid>
-                        <TextBox Name="Name"></TextBox>
+                        <ComboBox Name="ClientCard">
+                            <ComboBoxItem>
+                                Киев
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Казань
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Прага
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
+                        <ComboBox Name="Book">
+                            <ComboBoxItem>
+                                Кафедра 1
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Кафедра 2
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Кафедра 3
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <DatePicker Name="TakeDate" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Margin="0, 0, 0, 10" ></DatePicker>
+                    </Grid>
+                    <Grid>
+                        <DatePicker Name="ReturnDate" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Width="100" Margin="0, 0, 0, 10"></DatePicker>
+                    </Grid>
+                    <Grid>
+                        <TextBox IsEnabled="False">Я каменщик</TextBox>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -104,7 +138,7 @@
                     <StackPanel.Resources>
                         <Style TargetType="CheckBox" BasedOn="{StaticResource AddWindow CheckBox}"></Style>
                     </StackPanel.Resources>
-                    <CheckBox Padding="5, 0" Content="Активный"></CheckBox>
+                    <CheckBox Padding="5, 0" Content="Активная"></CheckBox>
                 </StackPanel>
             </Grid>
         </Grid>
