--- a/View/AddStudent.xaml
+++ b/View/AddStudent.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Database4.View.AddFaculty"
+﻿<Window x:Class="Database4.View.AddStudent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Добавить факультет">
+        Title="Добавить студента">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -34,7 +34,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление факультета" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление студента" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -68,13 +68,19 @@
                         <TextBlock Text="Идентификатор:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Полное название факультета:"></TextBlock>
+                        <TextBlock Text="Имя:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Краткое название факультета:"></TextBlock>
+                        <TextBlock Text="Фамилия:"></TextBlock>
                     </Grid>
                     <Grid>
-                        <TextBlock Text="Буква специальности:"></TextBlock>
+                        <TextBlock Text="Отчество:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Город:"></TextBlock>
+                    </Grid>
+                    <Grid>
+                        <TextBlock Text="Группа:"></TextBlock>
                     </Grid>
                 </StackPanel>
 
@@ -82,6 +88,7 @@
                 <StackPanel Grid.Column="1" Margin="10,0" VerticalAlignment="Center">
                     <StackPanel.Resources>
                         <Style TargetType="TextBox" BasedOn="{StaticResource AddWindow TextBox}"></Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource AddWindow ComboBox}"></Style>
                     </StackPanel.Resources>
                     <Grid>
                         <TextBox Name="ID" IsEnabled="False">0</TextBox>
@@ -90,10 +97,36 @@
                         <TextBox Name="Name"></TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortName"></TextBox>
+                        <TextBox Name="Surname"></TextBox>
                     </Grid>
                     <Grid>
-                        <TextBox Name="ShortLetter"></TextBox>
+                        <TextBox Name="Patronymic"></TextBox>
+                    </Grid>
+                    <Grid>
+                        <ComboBox Name="City">
+                            <ComboBoxItem>
+                                Киев
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Казань
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Прага
+                            </ComboBoxItem>
+                        </ComboBox>
+                    </Grid>
+                    <Grid>
+                        <ComboBox Name="Group">
+                            <ComboBoxItem>
+                                Кафедра 1
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Кафедра 2
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Кафедра 3
+                            </ComboBoxItem>
+                        </ComboBox>
                     </Grid>
                 </StackPanel>
             </Grid>
