--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="Database4.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="View/AddClientCard.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="View/AdminWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
